RESOLVED FIXED41235
uniformmatrix* should generate INVALID_VALUE with transpose = true
https://bugs.webkit.org/show_bug.cgi?id=41235
Summary uniformmatrix* should generate INVALID_VALUE with transpose = true
Zhenyao Mo
Reported 2010-06-25 16:52:36 PDT
This is different between GL and GLES.
Attachments
patch (10.98 KB, patch)
2010-06-28 10:28 PDT, Zhenyao Mo
no flags
Zhenyao Mo
Comment 1 2010-06-28 10:28:59 PDT
Kenneth Russell
Comment 2 2010-06-28 18:16:21 PDT
Comment on attachment 59908 [details] patch Looks good. If there isn't already one, a bug should be filed about validating the size of the incoming Float32Arrays or (float*, int size) argument pairs. That validation should go pretty easily into the new validateUniformMatrixParameters helper.
Dimitri Glazkov (Google)
Comment 3 2010-06-29 14:58:28 PDT
Comment on attachment 59908 [details] patch ok.
WebKit Commit Bot
Comment 4 2010-06-29 15:22:30 PDT
Comment on attachment 59908 [details] patch Clearing flags on attachment: 59908 Committed r62150: <http://trac.webkit.org/changeset/62150>
WebKit Commit Bot
Comment 5 2010-06-29 15:22:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.